# Seiriakos

./: .gitignore  CMakeLists.txt  README.md  test.cpp  test2.cpp
examples/: ODR.cpp  bus.cpp  main.cpp  simple.cpp  test.cpp  testing.cpp
include/: Chronometro.hpp  Seiriakos.hpp  logger.hpp
